# TASK_MANAGEMENT_BACK

task-manager-back/: pyproject.toml
task-manager-back/src/: main.py
task-manager-back/src/config/: .env  database.py  settings.py
task-manager-back/src/core/dto/: __init__.py  assign_dto.py  auth_dto.py  invitation_dto.py  response_dto.py  task_dto.py  user_dto.py
task-manager-back/src/core/entities/: __init__.py  assign.entity.py  assign.py  invitation.py  task.entity.py  task.py  user.py
task-manager-back/src/core/errors/: __init__.py  base.py  invitation_errors.py  task_errors.py  user_errors.py
task-manager-back/src/core/repositories/: __init__.py  assign_repository.py  invitation_repository.py  task_repository.py  user_repository.py
task-manager-back/src/core/services/: __init__.py  auth_service.py
task-manager-back/src/core/useCase/: __init__.py  base.py
task-manager-back/src/core/useCase/auth/: __init__.py  login_use_case.py  refresh_token_use_case.py  register_use_case.py
task-manager-back/src/core/useCase/invitation/: __init__.py  accept_invitation_use_case.py  create_invitation_use_case.py
task-manager-back/src/core/useCase/task/: __init__.py  create_task_use_case.py  delete_task_use_case.py  get_all_tasks_use_case.py  get_task_use_case.py  get_user_tasks_use_case.py  update_task_use_case.py
task-manager-back/src/core/valueObjects/: __init__.py  email.py  password.py  token.py
task-manager-back/src/infrastructure/database/: init_db.py
task-manager-back/src/middleware/: __init__.py  exception_handler.py
(+41 files in other folders)
