[tool.poetry]
name = "task-manager-back"
version = "0.1.0"
description = ""
authors = ["kessa99 <kipre325@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager_back", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
pydantic-settings = "^2.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.0"}
email-validator = "^2.0.0"
bcrypt = ">=4.0.1,<4.1"

[tool.poetry.scripts]
dev = "uvicorn main:app --reload"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
